--- a/index.html
+++ b/index.html
@@ -11,18 +11,42 @@
 </head>
 
 <body>
-  <div class = card>
-     
+<div class="row">
+  <div class="col-sm-6">
+    <div class = card>
+      
 <div class ="card-body">
-  <h1 class="card-title">Nadine</h1>
+  <h1 class="card-title bg-primary">nadine</h1>
   <h2 class = "card-subtitle">Manager<h2>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">123</li>
-    <li class="list-group-item"><a href="n@N">n@N</a></li>
+    <li class="list-group-item">NaN</li>
+    <li class="list-group-item"><a href="ndaein">ndaein</a></li>
+    <li class="list-group-item">undefined</li>
+  </ul>
+<div>
+,
+<div class ="card-body">
+  <h1 class="card-title bg-primary">Engineer</h1>
+  <h2 class = "card-subtitle">Engineer<h2>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">mo</li>
+    <li class="list-group-item"><a href="mo">mo</a></li>
+    <li class="list-group-item">undefined</li>
+  </ul>
+<div>
+,
+<div class ="card-body">
+  <h1 class="card-title bg-primary">Intern</h1>
+  <h2 class = "card-subtitle">Engineer<h2>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">cloe</li>
+    <li class="list-group-item"><a href="cloe">cloe</a></li>
     <li class="list-group-item">undefined</li>
   </ul>
 <div>
 
+      </div>
+    </div>
   </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
