fixed employee objects

--- a/index.html
+++ b/index.html
@@ -11,42 +11,41 @@
 </head>
 
 <body>
+
+    <div class>
+      
 <div class="row">
   <div class="col-sm-6">
-    <div class = card>
-      
-<div class ="card-body">
-  <h1 class="card-title bg-primary">nadine</h1>
-  <h2 class = "card-subtitle">Manager<h2>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">1</li>
-    <li class="list-group-item"><a href="n@n">n@n</a></li>
-    <li class="list-group-item">undefined</li>
-  </ul>
-<div>
+    <div class = "card">
+    <div class ="card-body">
+      <h1 class="card-title bg-primary">nadine</h1>
+      <h2 class = "card-subtitle">Manager<h2>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">1</li>
+          <li class="list-group-item"><a href="mailto:n@gmail.com">n@gmail.com</a></li>
+          <li class="list-group-item">123</li>
+        </ul>
+    <div>
+    </div>
+  </div>
+</div>
 ,
-<div class ="card-body">
-  <h1 class="card-title bg-primary">Mo</h1>
-  <h2 class = "card-subtitle">Engineer<h2>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">2</li>
-    <li class="list-group-item"><a href="m@m">m@m</a></li>
-    <li class="list-group-item">undefined</li>
-  </ul>
-<div>
-,
-<div class ="card-body">
-  <h1 class="card-title bg-primary">henry</h1>
-  <h2 class = "card-subtitle">Intern<h2>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">3</li>
-    <li class="list-group-item"><a href="h@h">h@h</a></li>
-    <li class="list-group-item">gwu</li>
-  </ul>
+<div class="row">
+  <div class="col-sm-6">
+  <div class = "card">
+    <div class ="card-body">
+      <h1 class="card-title bg-primary">mo</h1>
+      <h2 class = "card-subtitle">Engineer<h2>
+        <ul class="list-group list-group-flush">
+         <li class="list-group-item">2</li>
+         <li class="list-group-item"><a href="mailto:m@hotmail.com">m@hotmail.com</a></li>
+         <li class="list-group-item"><a href="https://github.com/mohub">Github</a></li>
+        </ul>
+     </div>
+     </div>
+  </div>
 <div>
 
-      </div>
-    </div>
   </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
