--- a/index.html
+++ b/index.html
@@ -7,46 +7,65 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Team-Profile</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 </head>
-
 <body>
-
-    <div class>
+<div class="text-center">
+<div class="p-4 mb-2 bg-danger text-white">My Team</div>
+  <div class="row container" style="margin: 2em auto 2em;">
+    <div class="row justify-content-md-center">
       
-<div class="row">
-  <div class="col-sm-6">
-    <div class = "card">
-    <div class ="card-body">
-      <h1 class="card-title bg-primary">nadine</h1>
-      <h2 class = "card-subtitle">Manager<h2>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">1</li>
-          <li class="list-group-item"><a href="mailto:n@gmail.com">n@gmail.com</a></li>
-          <li class="list-group-item">123</li>
-        </ul>
-    <div>
+<div class="col-sm-4" style="margin-top: 50px;">
+  <div class="card" style="width: 20rem;">
+  <div class="card-header bg-primary">
+  <h1 class="card-title bg-primary">nfdsaf</h1>
+  <h2 class = "card-subtitle"><i class="fas fa-mug-hot"></i>Manager<h2>
+  </div>
+  <div class="card-body">
+    <ul class="list-group text-left">
+      <li class="list-group-item">ID:NaN</li>
+      <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
+      <li class="list-group-item">Office number:NaN</li>
+    </ul>
     </div>
   </div>
 </div>
-,
-<div class="row">
-  <div class="col-sm-6">
-  <div class = "card">
-    <div class ="card-body">
-      <h1 class="card-title bg-primary">mo</h1>
-      <h2 class = "card-subtitle">Engineer<h2>
-        <ul class="list-group list-group-flush">
-         <li class="list-group-item">2</li>
-         <li class="list-group-item"><a href="mailto:m@hotmail.com">m@hotmail.com</a></li>
-         <li class="list-group-item"><a href="https://github.com/mohub">Github</a></li>
-        </ul>
-     </div>
-     </div>
+  
+    <div class="col-sm-4" style="margin-top: 50px;">
+      <div class ="card" style="width: 20rem;">
+        <div class="card-header bg-primary">
+<h1 class="card-title bg-primary">fdsa</h1>
+<h2 class = "card-subtitle"><i class="fas fa-glasses"></i>Engineer<h2>
+</div>
+<div class ="card-body">
+  <ul class="list-group text-left">
+    <li class="list-group-item">ID:f</li>
+    <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
+    <li class="list-group-item"><a href="https://github.com/nadinehub">Github</a></li>
+  </ul>
   </div>
-<div>
+  </div>
+</div>
 
+<div class="col-sm-4" style="margin-top: 50px;">
+  <div class ="card" style="width: 20rem;">
+    <div class="card-header bg-primary">
+      <h1 class="card-title bg-primary">fdsa</h1>
+      <h2 class = "card-subtitle"><i class="fas fa-user-graduate"></i>Intern<h2>
+    </div>
+  <div class ="card-body">
+    <ul class="list-group text-left">
+      <li class="list-group-item">ID:fdsa</li>
+      <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
+      <li class="list-group-item">School:fdsa</li>
+    </ul>
   </div>
+</div>
+</div>
+
+    </div>
+  </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
