--- a/index.html
+++ b/index.html
@@ -10,62 +10,66 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 </head>
 <body>
-<div class="text-center">
-<div class="p-4 mb-2 bg-danger text-white">My Team</div>
-  <div class="row container" style="margin: 2em auto 2em;">
-    <div class="row justify-content-md-center">
+<div class="container-fluid p-0 mb-0">
+        <div class="jumbotron jumbotron-fluid bg-danger text-light">
+            <div class="container text-center">
+                <h1 class="display-4">My Team</h1>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center" id="cards">
       
 <div class="col-sm-4" style="margin-top: 50px;">
   <div class="card" style="width: 20rem;">
   <div class="card-header bg-primary">
-  <h1 class="card-title bg-primary">nfdsaf</h1>
-  <h2 class = "card-subtitle"><i class="fas fa-mug-hot"></i>Manager<h2>
+  <h1 class="card-title bg-primary text-white">Nadine</h1>
+  <h2 class = "card-subtitle text-white"><i class="fas fa-mug-hot"></i>Manager<h2>
   </div>
   <div class="card-body">
     <ul class="list-group text-left">
-      <li class="list-group-item">ID:NaN</li>
-      <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
-      <li class="list-group-item">Office number:NaN</li>
+      <li class="list-group-item">ID: 1</li>
+      <li class="list-group-item">Email: <a href="mailto:nadine@gmail.com">nadine@gmail.com</a></li>
+      <li class="list-group-item">Office number: 123465789</li>
     </ul>
     </div>
   </div>
 </div>
   
-    <div class="col-sm-4" style="margin-top: 50px;">
-      <div class ="card" style="width: 20rem;">
-        <div class="card-header bg-primary">
-<h1 class="card-title bg-primary">fdsa</h1>
-<h2 class = "card-subtitle"><i class="fas fa-glasses"></i>Engineer<h2>
+  <div class="col-sm-4" style="margin-top: 50px;">
+<div class ="card" style="width: 20rem;">
+<div class="card-header bg-primary">
+<h1 class="card-title bg-primary text-white">Mo</h1>
+<h2 class = "card-subtitle text-white"><i class="fas fa-glasses"></i>Engineer<h2>
 </div>
 <div class ="card-body">
   <ul class="list-group text-left">
-    <li class="list-group-item">ID:f</li>
-    <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
-    <li class="list-group-item"><a href="https://github.com/nadinehub">Github</a></li>
+    <li class="list-group-item">ID: 2</li>
+    <li class="list-group-item">Email: <a href="mailto:Mo@hotmail.com">Mo@hotmail.com</a></li>
+    <li class="list-group-item">GitHub: <a target="_blank" href="https://github.com/Mohub">Mohub</a></li>
   </ul>
   </div>
   </div>
 </div>
 
 <div class="col-sm-4" style="margin-top: 50px;">
-  <div class ="card" style="width: 20rem;">
-    <div class="card-header bg-primary">
-      <h1 class="card-title bg-primary">fdsa</h1>
-      <h2 class = "card-subtitle"><i class="fas fa-user-graduate"></i>Intern<h2>
-    </div>
-  <div class ="card-body">
-    <ul class="list-group text-left">
-      <li class="list-group-item">ID:fdsa</li>
-      <li class="list-group-item">Email:<a href="mailto:fdsa">fdsa</a></li>
-      <li class="list-group-item">School:fdsa</li>
-    </ul>
+<div class ="card" style="width: 20rem;">
+<div class="card-header bg-primary">
+<h1 class="card-title bg-primary text-white">Henry</h1>
+<h2 class = "card-subtitle text-white"><i class="fas fa-user-graduate"></i>Intern<h2>
+</div>
+<div class ="card-body">
+<ul class="list-group text-left">
+<li class="list-group-item">ID: 3</li>
+<li class="list-group-item">Email: <a href="mailto:Henry@yahoo.com">Henry@yahoo.com</a></li>
+<li class="list-group-item">School: GWU</li>
+</ul>
   </div>
 </div>
 </div>
 
-    </div>
   </div>
-</div>
+  </div>
+  </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
